--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 serde_derive = "1.0"
+serde_json = "1.0"
 serde = "1.0"
