--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 serde = "1.0"
+
+[dev-dependencies]
+quickcheck = "0.9"
